--- a/playground/docs.jade
+++ b/playground/docs.jade
@@ -64,4 +64,4 @@ html
               include includes/playground-jqueryui
       //- include includes/footer
     include includes/scripts
-    include includes/analytics
+    //- include includes/analytics
