--- a/playground/docs/swatches.jade
+++ b/playground/docs/swatches.jade
@@ -4,24 +4,60 @@ block link
   -var selected = 'Swatches';
 
 block content
-  h1.atk-push-reset Swatches Test
+  h1 Swatches
   hr
-  .atk-row
-    .atk-col-4
-      .atk-box.atk-swatch-gray1  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray2  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray3  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray4  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray5  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray6  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray7  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray8  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
-    .atk-col-4
-      .atk-box.atk-swatch-gray9  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi laudantium corporis quos quas, praesentium et, consequuntur, quasi est repellat inventore earum accusantium recusandae voluptatum eius sapiente asperiores ad magnam debitis?
+  .atk-swatch-blue.atk-box
+    h2 Heading
+    p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+    .atk-comment This is comment.
+    hr
+    div(data-margin="bottom" data-items="spacing-xs")
+      a.atk-swatch-green.atk-button(href='#') Button
+      a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+      a.atk-button(href='#' data-border="outline thick") Button
+    .atk-box
+      h2 Heading
+      p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+      .atk-comment This is comment.
+      hr
+      div(data-margin="bottom" data-items="spacing-xs")
+        a.atk-swatch-green.atk-button(href='#') Button
+        a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+        a.atk-button(href='#' data-border="outline thick") Button
+      .atk-swatch-blue.atk-box
+        h2 Heading
+        p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+        .atk-comment This is comment.
+        hr
+        div(data-items="spacing-xs")
+          a.atk-swatch-green.atk-button(href='#') Button
+          a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+          a.atk-button(href='#' data-border="outline thick") Button
+  .atk-box
+    h2 Heading
+    p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+    .atk-comment This is comment.
+    hr
+    div(data-margin="bottom" data-items="spacing-xs")
+      a.atk-swatch-green.atk-button(href='#') Button
+      a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+      a.atk-button(href='#' data-border="outline thick") Button
+    .atk-swatch-blue.atk-box
+      h2 Heading
+      p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+      .atk-comment This is comment.
+      hr
+      div(data-margin="bottom" data-items="spacing-xs")
+        a.atk-swatch-green.atk-button(href='#') Button
+        a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+        a.atk-button(href='#' data-border="outline thick") Button
+      .atk-box
+        h2 Heading
+        p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
+        .atk-comment This is comment.
+        hr
+        div(data-items="spacing-xs")
+          a.atk-swatch-green.atk-button(href='#') Button
+          a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
+          a.atk-button(href='#' data-border="outline thick") Button
+
