--- a/playground/includes/sidebar.jade
+++ b/playground/includes/sidebar.jade
@@ -1,7 +1,7 @@
 block link
   -var selected = 'docs'; // by default
 
--var menu = { 'Getting Started': 'getting-started', 'Layout': 'layout', 'Grid System': 'grid-system', 'Icons': 'icons' };
+-var menu = { 'Getting Started': 'getting-started', 'Layout': 'layout', 'Grid System': 'grid-system', 'Icons': 'icons', 'Swatches': 'swatches', 'Spacing': 'spacing' };
 
 
 aside.atk-layout-column#sidebar
