--- a/playground/layouts/layout-test.html
+++ b/playground/layouts/layout-test.html
@@ -1,130 +1,6 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<meta charset="UTF-8"> 
-	<style type="text/css">
-		/* INFO Essential CSS for the grid layout */
-
-		/* NOTE IE7 and older explorers don't know anything about CSS-tables,
-		        so we use a CSS hack to exclude them. */
-		*>/**/.Grid {
-			-moz-box-sizing: border-box;
-			-webkit-box-sizing: border-box;
-			box-sizing: border-box;
-			display: table;
-			width: 100%;
-			height: 100%;
-		}
-		/* NOTE This is the only block IE7- should read */
-		.Grid>.Row, .Grid>.Column, .Grid>.Row>.Column {
-			height: 0.1%; /* NOTE: Forces child-margins inside the box */
-			position: relative;
-		}
-		.Grid>/**/.Row {
-			display: table-row;
-			height: 1px;
-		}
-		.Grid>/**/.Row.Expand {
-			height: auto;
-		}
-		.Grid>/**/.Column, .Grid>/**/.Row>.Column {
-			display: table-cell;
-			height: auto; /* NOTE Just to reset the IE7 fix */
-			width: 1px;
-		}
-		.Grid>/**/.Column.Expand, .Grid>/**/.Row>.Column.Expand {
-			width: auto;
-		}
-
-		/* INFO Optional CSS for a sticky footer */
-
-		html, body  {
-			height: 100%;
-		}
-
-		/* INFO Some other CSS for the look */
-		
-		html, body {
-			margin: 0em;
-		}	
-
-		body>.Grid {
-			background: #999;
-			margin: 0em;
-			padding: 1em;
-			table-layout: fixed; /* NOTE Speed up table rendering */
-		}
-		
-		#Header {
-			background: #fcc;
-			height: 70pt;
-		}
-		#Main {
-			background: #cfc;
-		}
-		#Footer {
-			background: #ccf;
-		}
-
-		#LSide {
-			background: #fcf;
-		}
-		#Content {
-			background: #ffc;
-		}
-		#RSide {
-			background: #cff;
-			width:150pt;
-		}
-		
-		p, h1, h2, h3 {
-			margin: 10pt;
-		}
-	</style>
-	<title>Pixels vs. Bytes | Example: This CSS layout grid is no Holy Grail</title>
-	<link href="../css/theme-fluid.css" rel="stylesheet" type="text/css"/>
-</head>
-
-<!-- INFO Some Chrome extensions need the display-property of the body to be 'block' -->
-<body>
-	<div class="atk-layout">
-	<div id="Header" class="atk-layout-row">
-		<h1>Header (70pt)</h1>
-	</div>
-	<div id="Main" class="atk-layout-row atk-layout-fluid">
-		<div id="Inside" class="atk-layout atk-layout-cell">
-			<div id="LSide" class="atk-layout atk-layout-cell">
-				<p>LSide (auto)</p>
-			</div>
-			<div id="Content" class="atk-layout atk-layout-cell Expand">
-				<h2>Content (expands)</h2>
-			</div>
-			<div id="RSide" class="atk-layout-cell">
-				<p>RSide (100pt)</p>
-			</div>
-		</div>
-	</div>
-	<div id="Footer" class="atk-layout-row">
-		<h3>Footer (auto)</h3>
-	</div>
-
-	<script type="text/javascript">
-		// INFO IE and Opera need some fixing to display the correct height of nested grids.
-
-		// NOTE Fortunately IE *and* Opera both implement attachEvent() and they seem to be
-		//      the only browsers, so we can use it as a filter as well.
-		if (window.attachEvent) {
-			function fixGrid() {
-				var grid = document.getElementById('Inside');
-				grid.style.height = null; // NOTE Remove old height before getting new value.
-				grid.style.height = grid.parentNode.offsetHeight+'px';
-			}
-			window.attachEvent('onload', fixGrid);
-			window.attachEvent('onresize', fixGrid);
-		}
-	</script>
-</div></body>
-
-</html>
+<!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]--><title>Agile Toolkit CSS // Layout Test</title><meta name="description" content=""><link rel="stylesheet" href="../css/theme-fluid.css"><script src="../js/atk-helpers-min.js"></script></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+Please <a href="http://browsehappy.com/">upgrade your browser</a>
+to improve your experience.</p><![endif]--><div class="atk-layout"><div class="atk-layout-row"><div class="atk-layout-cell atk-swatch-ink"><div class="atk-wrapper atk-padding-small"><h2>Header Area</h2></div></div></div><div class="atk-layout-row atk-layout-fluid"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-swatch-gray atk-col-3"><div class="atk-padding"><h2>Left Sidebar</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.</p></div></div><div class="atk-layout-column"><div class="atk-wrapper atk-padding-large"><h2>Content Area</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.</p><p>Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.</p></div></div><div class="atk-layout-column atk-swatch-gray atk-col-3"><div class="atk-padding"><h2>Right Sidebar</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.</p></div></div></div></div><div class="atk-layout-row"><div class="atk-layout-cell atk-swatch-ink"><div class="atk-wrapper atk-padding"><h2>Footer Area</h2></div></div></div></div></body></html>
