--- a/playground/includes/head-docs.jade
+++ b/playground/includes/head-docs.jade
@@ -5,6 +5,5 @@ head
   <!--<![endif]-->
   title Agile Toolkit CSS
   meta(name='description', content='')
-  //- link(href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700', rel='stylesheet', type='text/css')
-  link(href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono', rel='stylesheet', type='text/css')
+  //- link(href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono', rel='stylesheet', type='text/css')
   link(rel='stylesheet', href='../css/playground-theme.css')
